# youtube_to_rutube

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/db/: base.py  models.py  repo.py
app/routes/: __init__.py  admin.py  webhook.py
app/services/: __init__.py  downloader.py  mapper.py  orchestrator.py  rss.py  transcoder.py  uploader.py
app/utils/: __init__.py  logging.py  paths.py  retry.py
app/workers/: worker.py
scripts/: auth_playwright.py  init_websub.py
tests/: test_mapper.py  test_orchestrator.py  test_rss.py
